--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"webpack-dev-server --mode development --open --hot",
-    "build":"webpack --mode production"
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production --config webpack.config.build.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
