--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 7070
 spring.devtools.livereload.enabled=true
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
+spring.mvc.view.prefix=/resources/views/
+spring.mvc.view.suffix=.html
 spring.mvc.static-path-pattern=/resources/**
