docker file 수정 spring boot build jar 변경

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>spring-boot-2.2-test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>spring-boot-2.2-test</name>
 	<description>Demo project for Spring Boot</description>
 
